# webviewpy

./: .gitignore  CMakeLists.txt  README.md  cibuildlib.py  pyproject.toml  test.py  testpyqt.py  webview.py
.github/workflows/: main.yml
example/: test.py  testpyqt.py  testtkinter.py  win32.py
example/fluent/: main.py  package.json
example/fluent/src/: App.js
test/: test.py  testpyqt.py
webviewpy/: __init__.py  __init__.pyi
webviewpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
webviewpy/tools/: __init__.py
webviewpy/tools/__pyinstaller/: hook-webviewpy.py
