[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "webviewpy"
version = "0.0.1"
authors = [
  { name="HIllya51", email="1871535768@qq.com" },
]

description = "ctypes binding of webview"
readme = "README.md"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HIllya51/webviewpy"
Repository = "https://github.com/HIllya51/webviewpy"

[tool.setuptools]
include-package-data = false
packages = ["webviewpy", "webviewpy.platform"]

[tool.setuptools.package-data]
"webviewpy.platform" = ["**/*.dll"]

[tool.setuptools_scm]
write_to = "webviewpy/__version__.py"
